# hello_rust

./: Cargo.toml
src/: build.rs  hello.proto  main.rs
