[package]
name = "hello_world"
version = "0.1.0"
authors = ["Marimba Games <marimbagames@gmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.5.0"
bytes = "0.4.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
prost-build = "0.5.0"
